[workspace]
members = [ "nexus-counters", "nexus-hashmap","nexus-ids", "nexus-kernel", "nexus-lattice", "nexus-list", "nexus-message", "nexus-node", "nexus-observer", "nexus-serialize", "nexus-session-store"]
resolver = "2"

[workspace.package]
authors = ["Vlad Eminovici"]
description = "A set of crate for distributed systems"

[workspace.dependencies]
actix = "0.13.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = "1.36.0"
